<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.DetailRankMeasureActivity">

    <Button
        android:id="@+id/detailRankMeasureResultBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="32dp"
        android:onClick="onClick"
        android:text="@string/infor_show_result"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/detailMeasureLayout" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/detailMeasureLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:background="@drawable/outside_line_fill_gray"
        app:layout_constraintBottom_toTopOf="@+id/detailRankMeasureResultBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/detailRankMeasureTitleTextview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:onClick="titleOnClick"
            android:text="@string/title_detail_rank_measure"
            android:textSize="36sp"
            app:layout_constraintBottom_toTopOf="@+id/highDetailMeasureLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/heatbeatDetailMeasureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outside_round_fill_orange"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/vaDetailMeasureLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/highDetailMeasureLayout">

            <TextView
                android:id="@+id/inforDetailHeartbeat"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/unit_heartbeat"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/inforDetailResultHeartbeatTextview"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inforDetailResultHeartbeatTextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/default_none"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inforDetailHeartbeat"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vaDetailMeasureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outside_round_fill_orange"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/weightDetailMeasureLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/heatbeatDetailMeasureLayout">

            <EditText
                android:id="@+id/vaDetailLeftEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="4dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:hint="@string/info_left"
                android:importantForAutofill="no"
                android:inputType="numberSigned|numberDecimal"
                android:maxEms="3"
                android:padding="8dp"
                android:singleLine="false"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vaDetailRightEditText"
                app:layout_constraintStart_toEndOf="@+id/inforDetailVA"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inforDetailVA"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/unit_va"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/vaDetailLeftEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/vaDetailRightEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="4dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:hint="@string/info_right"
                android:inputType="numberSigned|numberDecimal"
                android:maxEms="3"
                android:padding="8dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/vaDetailLeftEditText"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/weightDetailMeasureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outside_round_fill_orange"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/vaDetailMeasureLayout">

            <EditText
                android:id="@+id/weightDetailEditText"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:hint="@string/infor_input_here"
                android:importantForAutofill="no"
                android:inputType="numberSigned|numberDecimal"
                android:padding="8dp"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inforDetailWeight"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inforDetailWeight"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:onClick="weightOnClick"
                android:padding="8dp"
                android:text="@string/unit_weight"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/weightDetailEditText"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/highDetailMeasureLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="24dp"
            android:background="@drawable/outside_round_fill_orange"
            android:padding="8dp"
            app:layout_constraintBottom_toTopOf="@+id/heatbeatDetailMeasureLayout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/inforDetailHigh"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/unit_high"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toStartOf="@+id/inforResultDetailHighTextview"
                app:layout_constraintHorizontal_chainStyle="spread_inside"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/inforResultDetailHighTextview"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                android:background="@drawable/outside_round_fill_white"
                android:gravity="center"
                android:padding="8dp"
                android:text="@string/default_none"
                android:textSize="24sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toEndOf="@+id/inforDetailHigh"
                app:layout_constraintTop_toTopOf="parent" />
        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>